--- a/transportes/transportesEscolaresSena/templates/transportes/index.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/index.html
@@ -33,25 +33,31 @@
             </div>
         </form>
         <div id="respuesta">
-        {%for t in datos %}
-        <div class="container">
-        <div class="card mb-3" style="max-width: 1200px; max-height: 1000px;" >
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="..." class="img-fluid rounded-start" alt="...">
+          {%for t in datos %}
+            {%if t.rol == 'P'%}
+              <div class="container">
+                <div class="card mb-3" style="max-width: 1200px; max-height: 1000px;" >
+                    <div class="row g-0">
+                      <div class="col-md-4">
+                        <img src="{{t.foto.url}}" class="img-fluid rounded-start" alt="...">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">{{t.nombre}} {{t.apellido}}</h5>
+                          <p class="card-text">Correo: {{t.correo}}</p>
+                          <p class="card-text">Direccion:{{t.direccion}} </p>
+                          <p class="card-text">Documento: {{t.documento}}</p>
+                          <p class="card-text">Fecha de Nacimiento: {{t.fecha_nacimiento}}</p>
+                          <p class="card-text"><small class="text-muted">Proveedor</small></p>
+                          <a href="{% url 'transportes:verUsuario' t.id %}">Ver</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
               </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">{{t.nombre}} {{t.apellido}}</h5>
-                  <p class="card-text">Correo: {{t.correo}}</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  <a href="{% url 'transportes:verUsuario' t.id %}">Ver</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        {%endfor%}
+            {%endif%}
+
+          {%endfor%}
       <div class="container">
         <p>Página {{ datos.number }} de {{ datos.paginator.num_pages }}.</p>
         <nav aria-label="...">
@@ -78,48 +84,49 @@
             </ul>
           </nav>
         </div>
-
-          <footer>
-            <div class="row text-white">
-                <div class="container">
-                    <div class="row gy-5">
-                        <div class="col-lg-4 px-5">
-                            <h4 class="font-weight-bold mb-4">NOSOTROS</h4>
-                            <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering
-                                animata corpora quaeritis. Summus brains sit​​.</p>
-                        </div>
-                        <div class="col-lg-4 px-5">
-                            <h4 class="font-weight-bold mb-4">CREDITOS</h4>
-                            <a href="https://www.freepik.com/free-photos-vectors/water">Water psd created by freepik -
-                                www.freepik.com</a>
-                        </div>
-                        <div class="col-lg-4 px-5">
-                            <h4 class="font-weight-bold mb-4">CONTACTANOS</h4>
-                            <div class="d-flex">
-                                <span class="material-icons">
-                                    local_phone
-                                </span>
-                                <p class="ml-3">(01) 555 5555</p>
-                            </div>
-                            <div class="d-flex">
-                                <span class="material-icons">
-                                    house
-                                </span>
-                                <p class="ml-3">Jr. lorem ipsum #777</p>
-                            </div>
-                            <div class="d-flex">
-                                <span class="material-icons">
-                                    email
-                                </span>
-                                <p class="ml-3">andygeek@andygeek.com</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </footer>
-
-
+        <footer style="background-color: black;padding-top: 100px !important;padding-bottom: 100px !important;">
+          <div class="row text-white">
+              <div class="container">
+                  <div class="row gy-5">
+                      <div class="col-lg-4 px-5">
+                          <h4 class="font-weight-bold mb-4">NOSOTROS</h4>
+                          <p>Transportes Escolares</p>
+                          <p>Un servicio Fácil y Secillo</p>
+          
+                      </div>
+                      <div class="col-lg-4 px-5">
+                          <h4 class="font-weight-bold mb-4">CREDITOS</h4>
+                          <p>Alejandro Muñoz Lezcano</p>
+                          <p>Software Developer</p>
+          
+                      </div>
+                      <div class="col-lg-4 px-5">
+                          <h4 class="font-weight-bold mb-4">CONTACTANOS</h4>
+                          <div class="d-flex">
+                              <span class="material-icons">
+                                  local_phone:
+                              </span>
+                              <p class="ml-3"> 3137229034</p>
+                          </div>
+                          <div class="d-flex">
+                              <span class="material-icons">
+                                  
+                              </span>
+                              <p class="ml-3">Sevicio Nacional de Aprenizaje</p>
+                          </div>
+                          <div class="d-flex">
+                              <span class="material-icons">
+                                  email:
+                              </span>
+                              <p class="ml-3">alejandro.muoz2@misena.edu.co</p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          </footer>
+          
+       
     {%else%}
         No hay datos...
     {%endif%}
