--- a/transportes/transportesEscolaresSena/templates/transportes/login/usuarios/listar_Usuario_ajax.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/login/usuarios/listar_Usuario_ajax.html
@@ -40,9 +40,10 @@
             <div class="card mb-3" style="max-width: 1200px; max-height: 1000px;" >
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
+                    <img src="{{t.foto.url}}" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
+                    
                     <div class="card-body">
                       <h5 class="card-title">{{t.nombre}} {{t.apellido}}</h5>
                       <p class="card-text">Correo: {{t.correo}}</p>
