--- a/transportes/transportesEscolaresSena/templates/transportes/login/vehiculo/editarVehiculo.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/login/vehiculo/editarVehiculo.html
@@ -40,7 +40,7 @@
             <input type="text" class="form-control" id="" value="{{ vehiculo.color }}" name="color">
           </div>
           <label>Foto</label>
-          <strong><span> - actual: {{ trabajador.foto }}</span></strong>
+          <strong><span> - actual: {{ vehiculo.foto }}</span></strong>
           <input type="file" name="foto" class="form-control" accept="image/*" /><br>
           
          
