--- a/transportes/transportesEscolaresSena/templates/transportes/login/vehiculo/listar_Vehiculo_ajax.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/login/vehiculo/listar_Vehiculo_ajax.html
@@ -56,7 +56,7 @@
                     <td>{{t.color}}</td>
                     <td>{{t.cliente}}</td>
                     <td>
-                        <img src="{{ t.foto.url }}" width="20%" />
+                        <img src="{{t.foto.url}}" width="10%">
                     </td>
                     <td>
                         <div class="d-grid gap-2 d-md-block">
