--- a/transportes/transportesEscolaresSena/templates/transportes/indexPrimary.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/indexPrimary.html
@@ -10,26 +10,26 @@
     <link href="{% static 'transportes/css/styleIndex.css' %}" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header id = "header">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'transportes:indexPrimary' %}">Logoooo</a>
-      <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-bs-target="#miLista">
+        <a href="{% url 'transportes:indexPrimary' %}"><img  src="../../static/transportes/assets/logo.png"  width="200px" height="200px" class="img-fluid rounded-start" alt="..." ></a>
+        <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-bs-target="#miLista">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="miLista">
         <ul class="navbar-nav">
           <li class="nav-item mb-3">
-            <a class="nav-link text-white" href="">Principal</a>
+            <a class="nav-link text-white" href="#header">Principal</a>
           </li>
           <li class="nav-item mb-3">
-            <a class="nav-link text-white" href="">Nosotros</a>
+            <a class="nav-link text-white" href="#row-nosotros">Nosotros</a>
           </li>
           <li class="nav-item mb-3">
-            <a class="nav-link text-white" href="">Servicios</a>
+            <a class="nav-link text-white" href="#row-servicios">Servicios</a>
           </li>
           <li class="nav-item mb-3">
-            <a class="nav-link text-white" href="">Contacto</a>
+            <a class="nav-link text-white" href="#row-contacto">Contacto</a>
           </li>
         </ul>
       </div>
@@ -48,20 +48,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 text-center">
-                        <img src="assets/img4.png" alt="Atleta">
+                        <img src="../../static/transportes/assets/foto1.jpg" alt="Atleta">
                     </div>
                     <div class="col-md-7 mt-4">
                         <h1 class="font-weight-bold title-color mb-3">Sobre Nosotros</h1>
-                        <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering
-                            animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger
-                            omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil
-                            stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated
-                            corpse.</p>
-                        <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering
-                            animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger
-                            omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil
-                            stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated
-                            corpse.</p>
+                        <p>Somos una empresa que esta enfocada especialmente en ¡ti!</p>
+                        <p>Entramos a la industria para digitalizar el mundo de los transportes Escolares.
+                            Desde ahora no es necesario salir a las calles en busca de este servicio, desde 
+                            la comodidad de tu casa y a unsolo click estamos nosotros, ofreciendo una gran 
+                            variedad de transportes que se acojen a tus necesidades.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -71,28 +67,38 @@
                 <div class="row text-center">
                     <div class="col">
                         <div class="mx-auto circulo d-flex justify-content-center align-items-center">
-                            <h1 class="font-weight-bold title-color">20</h1>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-chat-text-fill" viewBox="0 0 16 16">
+                                <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM4.5 5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7zm0 2.5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7zm0 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4z"/>
+                              </svg>
                         </div>
-                        <h5 class="font-weight-bold mt-3 text-white">PISCINAS</h5>
+                        <h5 class="font-weight-bold mt-3 text-white">Peticiones</h5>
                     </div>
                     <div class="col">
                         <div class="mx-auto circulo d-flex justify-content-center align-items-center">
-                            <h1 class="font-weight-bold title-color">55</h1>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-columns-gap" viewBox="0 0 16 16">
+                                <path d="M6 1v3H1V1h5zM1 0a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1V1a1 1 0 0 0-1-1H1zm14 12v3h-5v-3h5zm-5-1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5zM6 8v7H1V8h5zM1 7a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1H1zm14-6v7h-5V1h5zm-5-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1V1a1 1 0 0 0-1-1h-5z"/>
+                              </svg>                        
                         </div>
-                        <h5 class="font-weight-bold mt-3 text-white">ENTRENADORES</h5>
+                        <h5 class="font-weight-bold mt-3 text-white">Vistas</h5>
+                    </div>
+                    
+                    <div class="col">
+                        <div class="mx-auto circulo d-flex justify-content-center align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-bus-front" viewBox="0 0 16 16">
+                                <path d="M5 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Zm8 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0Zm-6-1a1 1 0 1 0 0 2h2a1 1 0 1 0 0-2H7Zm1-6c-1.876 0-3.426.109-4.552.226A.5.5 0 0 0 3 4.723v3.554a.5.5 0 0 0 .448.497C4.574 8.891 6.124 9 8 9c1.876 0 3.426-.109 4.552-.226A.5.5 0 0 0 13 8.277V4.723a.5.5 0 0 0-.448-.497A44.303 44.303 0 0 0 8 4Zm0-1c-1.837 0-3.353.107-4.448.22a.5.5 0 1 1-.104-.994A44.304 44.304 0 0 1 8 2c1.876 0 3.426.109 4.552.226a.5.5 0 1 1-.104.994A43.306 43.306 0 0 0 8 3Z"/>
+                                <path d="M15 8a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1V2.64c0-1.188-.845-2.232-2.064-2.372A43.61 43.61 0 0 0 8 0C5.9 0 4.208.136 3.064.268 1.845.408 1 1.452 1 2.64V4a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1v3.5c0 .818.393 1.544 1 2v2a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5V14h6v1.5a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-2c.607-.456 1-1.182 1-2V8ZM8 1c2.056 0 3.71.134 4.822.261.676.078 1.178.66 1.178 1.379v8.86a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 11.5V2.64c0-.72.502-1.301 1.178-1.379A42.611 42.611 0 0 1 8 1Z"/>
+                            </svg>                        </div>
+                        <h5 class="font-weight-bold mt-3 text-white">Servicios</h5>
                     </div>
                     <div class="col">
                         <div class="mx-auto circulo d-flex justify-content-center align-items-center">
-                            <h1 class="font-weight-bold title-color">11</h1>
-                        </div>
-                        <h5 class="font-weight-bold mt-3 text-white">OLIMPIADAS</h5>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-card-text" viewBox="0 0 16 16">
+                                <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
+                                <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"/>
+                              </svg>                        </div>
+                        <h5 class="font-weight-bold mt-3 text-white">Comentarios</h5>
                     </div>
-                    <div class="col">
-                        <div class="mx-auto circulo d-flex justify-content-center align-items-center">
-                            <h1 class="font-weight-bold title-color">33</h1>
-                        </div>
-                        <h5 class="font-weight-bold mt-3 text-white">PREMIOS</h5>
-                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -100,20 +106,17 @@
             <div class="container">
                 <div class="row flex-row-reverse">
                     <div class="col-md-5 text-center">
-                        <img src="assets/img5.png" alt="Atleta">
+                        <img src="../../static/transportes/assets/foto2.jpg" alt="Atleta">
                     </div>
                     <div class="col-md-7 mt-4">
                         <h1 class="font-weight-bold title-color mb-3">Nuestros Servicios</h1>
-                        <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering
-                            animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger
-                            omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil
-                            stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated
-                            corpse.</p>
-                        <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering
-                            animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger
-                            omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil
-                            stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated
-                            corpse.</p>
+                        <p>Te podemos ayudar a ti como papá, que busca un servicio fácil y confiable
+                            donde puedas dejar a tu hijo con tranqilidad, ya que tienes acceso a la 
+                            infomación mas importante del transportador. Y en caso de que seas un 
+                            proeedor, te ofrecemos la capacidad de adquirir nuevos clientes de forma 
+                            sencilla, tan solo registrandote y dando a conocer lo que tienes para ofrecer
+                            como transportador.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -122,12 +125,10 @@
             <div class="container text-center">
                 <div class="col-md-6 mx-auto">
                     <h1 class="title-color font-weight-bold">Contacto</h1>
-                    <h5 class="mt-4">Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne
-                        lumbering animata corpora quaeritis. Summus brains sit​​.</h5>
-                    <div class="input-group mt-5">
-                        <input class="form-control" type="text" placeholder="Email">
-                        <button class="btn">Enviar</button>
-                    </div>
+                    <h5 class="mt-4">Correo electronico: alejandro.muoz2@misena.edu.co</h5>
+                    <h5 class="mt-4">Linea Nacional: 3137229034</h5>
+
+                    
                 </div>
             </div>
         </div>
@@ -138,33 +139,35 @@
         <div class="row gy-5">
             <div class="col-lg-4 px-5">
                 <h4 class="font-weight-bold mb-4">NOSOTROS</h4>
-                <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering
-                    animata corpora quaeritis. Summus brains sit​​.</p>
+                <p>Transportes Escolares</p>
+                <p>Un servicio Fácil y Secillo</p>
+
             </div>
             <div class="col-lg-4 px-5">
                 <h4 class="font-weight-bold mb-4">CREDITOS</h4>
-                <a href="https://www.freepik.com/free-photos-vectors/water">Water psd created by freepik -
-                    www.freepik.com</a>
+                <p>Alejandro Muñoz Lezcano</p>
+                <p>Software Developer</p>
+
             </div>
             <div class="col-lg-4 px-5">
                 <h4 class="font-weight-bold mb-4">CONTACTANOS</h4>
                 <div class="d-flex">
                     <span class="material-icons">
-                        local_phone
+                        local_phone:
                     </span>
-                    <p class="ml-3">(01) 555 5555</p>
+                    <p class="ml-3"> 3137229034</p>
                 </div>
                 <div class="d-flex">
                     <span class="material-icons">
-                        house
+                        
                     </span>
-                    <p class="ml-3">Jr. lorem ipsum #777</p>
+                    <p class="ml-3">Sevicio Nacional de Aprenizaje</p>
                 </div>
                 <div class="d-flex">
                     <span class="material-icons">
-                        email
+                        email:
                     </span>
-                    <p class="ml-3">andygeek@andygeek.com</p>
+                    <p class="ml-3">alejandro.muoz2@misena.edu.co</p>
                 </div>
             </div>
         </div>
