--- a/transportes/transportesEscolaresSena/templates/transportes/login/login.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/login/login.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Logo</a>
+            <a href="{% url 'transportes:indexPrimary' %}"> <img  src="../../static/transportes/assets/logo.png"  width="200px" height="200px" class="img-fluid rounded-start" alt="..." ></a>
         </div>
     </nav><br><br><br>
 {% if messages %}
