--- a/transportes/transportesEscolaresSena/templates/transportes/login/usuarios/editarUsuario.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/login/usuarios/editarUsuario.html
@@ -24,6 +24,25 @@
             <label for="" class="form-label">Apellido:</label>
             <input type="text" class="form-control" id="" value="{{ cliente.apellido }}" name="apellido">
           </div>
+
+          <div class="mb-3 mt-3">
+            <label>Usuario</label>
+            <input type="text" class="form-control" id="" value="{{ cliente.usuario }}" name="usuario">
+          </div>
+
+          <div class="mb-3 mt-3">
+            <label>contraseña</label>
+            <input type="password" class="form-control" id="" value="{{ cliente.clave }}" name="clave">
+          </div>
+          <div class="mb-3 mt-3">
+            <label>Rol</label>
+            <select value="{{ cliente.rol }}" name="rol" class="form-control">
+                <option >Seleccione</option>
+                <option value="A">Administrador</option>
+                <option value="P">Proveedor</option>
+                <option value="C" >Cliente</option>
+            </select>
+          </div>
           <div class="mb-3 mt-3">
             <label for="" class="form-label">Correo:</label>
             <input type="email" class="form-control" id="email" value="{{ cliente.correo }}" name="correo">
@@ -37,7 +56,7 @@
             <input type="number" class="form-control" id="" value="{{ cliente.documento }}" name="documento">
           </div>
           <div class="mb-3 mt-3">
-            <label for="" class="form-label">Fecga de Nacimiento:</label>
+            <label for="" class="form-label">Fecha de Nacimiento:</label>
             <input type="date" class="form-control" id="" value="{{ cliente.fecha_nacimiento }}" name="fecha_nacimiento">
           </div>
           <label>Foto</label>
