--- a/transportes/transportesEscolaresSena/templates/transportes/login/usuarios/listarUsuario.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/login/usuarios/listarUsuario.html
@@ -66,7 +66,7 @@
                     <td>{{t.documento}}</td>
                     <td>{{t.fecha_nacimiento}}</td>
                     <td>
-                      <img src="{{t.foto.url}}" width="10%">
+                      <img src="" width="10%">
                   </td>
                     <td>
                         <div class="d-grid gap-2 d-md-block">
