--- a/transportes/transportesEscolaresSena/templates/transportes/login/usuarios/verUsuario.html
+++ b/transportes/transportesEscolaresSena/templates/transportes/login/usuarios/verUsuario.html
@@ -123,6 +123,8 @@
                         
                       </table>
                       <a class="btn btn-primary" href="{% url 'transportes:registrarPeticiones' %}">Realizar Petición</a>
+                      <a class="btn btn-primary" href="{% url 'transportes:registrarComentarios' %}">Realizar Comentario</a>
+
                 </div>
             </div>
             <div class="col-md-4">
@@ -160,7 +162,7 @@
     </div>
     
       
-      -->
+     
 
        
       <script src="{% static 'transportes/js/popper.min.js' %}"></script>
